feat: finish flight search page

--- a/flight/flightsearch.html
+++ b/flight/flightsearch.html
@@ -178,7 +178,7 @@
       <div class="reviews-heading">
         <div class="grid">
           <h1 class="heading-primary">Let's go places together</h1>
-          <p class="heading-normal-txt">
+          <p class="secondary-heading heading-normal-txt">
             Discover the latest offers, news and start planning your next trip
             with us.
           </p>
@@ -8986,6 +8986,135 @@
             <p class="fs-10 text-neutral-grey">Boarding Pass N'123</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- Travel Bundle Section -->
+    <section class="travel-bundle-container">
+      <div class="reviews-heading">
+        <div class="grid">
+          <h1 class="heading-primary">Pack Your Plans</h1>
+          <p class="secondary-heading heading-normal-txt">
+            Your one-stop travel pack for wherever you're off to next.
+          </p>
+        </div>
+        <button class="btn-stroke">See All</button>
+      </div>
+      <div class="booking-banner box-area">
+        <div class="box">
+          <img class="image-box" src="/assets/travel-bg-au.svg" alt="Flights" />
+          <div class="card-overlay">
+            <div class="flex">
+              <div class="grid">
+                <h1>Melbourne</h1>
+                <p>An amazing journey</p>
+              </div>
+              <h2 class="fw-semi-bold fs-24">$ 700</h2>
+            </div>
+            <button class="travel-bundle-btn inline-flex btn-primary">
+              Book Flight
+            </button>
+          </div>
+        </div>
+        <div class="box">
+          <img
+            class="image-box"
+            src="/assets/travel-bg-paris.svg"
+            alt="Flights"
+          />
+          <div class="card-overlay">
+            <div class="flex">
+              <div class="grid">
+                <h1>Paris</h1>
+                <p>A paris adventure</p>
+              </div>
+              <h2 class="fw-semi-bold fs-24">$ 700</h2>
+            </div>
+            <button class="travel-bundle-btn inline-flex btn-primary">
+              Book Flight
+            </button>
+          </div>
+        </div>
+        <div class="box">
+          <img
+            class="image-box"
+            src="/assets/travel-bg-london.svg"
+            alt="Flights"
+          />
+          <div class="card-overlay">
+            <div class="flex">
+              <div class="grid">
+                <h1>London</h1>
+                <p>London eye adventure</p>
+              </div>
+              <h2 class="fw-semi-bold fs-24">$ 700</h2>
+            </div>
+            <button class="travel-bundle-btn inline-flex btn-primary">
+              Book Flight
+            </button>
+          </div>
+        </div>
+        <div class="box">
+          <img
+            class="image-box"
+            src="/assets/travel-bg-columbia.svg"
+            alt="Flights"
+          />
+          <div class="card-overlay">
+            <div class="flex">
+              <div class="grid">
+                <h1>Columbia</h1>
+                <p>Amazing strees</p>
+              </div>
+              <h2 class="fw-semi-bold fs-24">$ 700</h2>
+            </div>
+            <button class="travel-bundle-btn inline-flex btn-primary">
+              Book Flight
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Travel Location -->
+    <section class="travel-location-container">
+      <div class="reviews-heading">
+        <div class="grid">
+          <h1 class="heading-primary">Fall into travel</h1>
+          <p class="secondary-heading heading-normal-txt">
+            Going somewhere to celebrate this season? Whether you’re going home or somewhere to roam, we’ve got the travel tools to get you to your destination.
+          </p>
+        </div>
+        <button class="btn-stroke">See All</button>
+      </div>
+      <div class="travel-location-wrapper">
+        <div class="travel-location-card card-1">
+          <div class="flex">
+            <div class="grid">
+              <div class="travel-location-heading flex">
+                <h1 class="fw-bold">Backpacking Sri Lanka</h1>
+                <div class="text-center">
+                  <p>From</p>
+                  <h2 class="fw-semi-bold">$ 700</h2>
+                </div>
+              </div>
+              <p class="fs-14 ">
+                Traveling is a unique experience as it's the best way to unplug
+                from the pushes and pulls of daily life. It helps us to forget
+                about our problems, frustrations, and fears at home. During our
+                journey, we experience life in different ways. We explore new
+                places, cultures, cuisines, traditions, and ways of living.
+              </p>
+            </div>
+          </div>
+          <button class="travel-location-btn inline-flex btn-primary">
+            Book Flight
+          </button>
+        </div>
+        <div class="travel-location-card card-2"><img src="/assets/srilanka-bg-1.svg" alt=""></div>
+        <div class="travel-location-card card-3"><img src="/assets/srilanka-bg-2.svg" alt=""></div>
+        <div class="travel-location-card card-4"><img src="/assets/srilanka-bg-3.svg" alt=""></div>
+        <div class="travel-location-card card-5"><img src="/assets/srilanka-bg-4.svg" alt=""></div>
       </div>
     </section>
 
