--- a/landing/index.html
+++ b/landing/index.html
@@ -67,7 +67,7 @@
 
       <!-- Mobile Navigation -->
       <div class="mobile-nav" id="mobileNav">
-        <a href="#" class="mobile-link">
+        <a href="/flight/flightsearch.html" class="mobile-link">
           <img src="/assets/airplane-icon.svg" alt="airplane" />
           <span class="fs-16 fw-semi-bold">&nbsp;Find Flights</span>
         </a>
@@ -100,7 +100,7 @@
               <p class="fs-45 fw-bold">Wander with Purpose</p>
               <h1 class="fs-94 ff-primary fw-bold">GO BEYOND</h1>
               <h2 class="fs-20 fw-semi-bold">
-                Unforgettable journeys tailored for you
+                Travel made simple
               </h2>
             </div>
           </div>
@@ -110,7 +110,7 @@
               <p class="fs-45 fw-bold">Travel Made Simple</p>
               <h1 class="fs-94 ff-primary fw-bold">COZY TRAILS</h1>
               <h2 class="fs-20 fw-semi-bold">
-                Enjoy seamless bookings and exclusive deals
+                Where to next? Let’s go!
               </h2>
             </div>
           </div>
@@ -240,7 +240,7 @@
       <div class="places-heading">
         <div class="grid">
           <h1 class="heading-primary">Plan your perfect trip</h1>
-          <p class="heading-normal-txt">
+          <p class="secondary-heading heading-normal-txt">
             Search Flights & Places Hire to our most popular destinations
           </p>
         </div>
@@ -342,7 +342,7 @@
 
     <!-- Banner Cards -->
     <section class="booking-banner">
-      <div class="container flex box-area">
+      <div class="container box-area">
         <div class="box">
           <img class="image-box" src="/assets/flights-bg.svg" alt="Flights" />
           <div class="card-overlay">
@@ -372,7 +372,7 @@
       <div class="reviews-heading">
         <div class="grid">
           <h1 class="heading-primary">Reviews</h1>
-          <p class="heading-normal-txt">
+          <p class="secondary-heading heading-normal-txt">
             What people says about Golobe facilities
           </p>
         </div>
@@ -513,7 +513,7 @@
                   </div>
                 </div>
                 <div class="swiper-content-img">
-                  <img src="/assets/review-banner-3.svg" alt="" />
+                  <img src="/assets/review-banner-1.svg" alt="" />
                 </div>
               </div>
             </div>
@@ -547,7 +547,7 @@
                   </div>
                 </div>
                 <div class="swiper-content-img">
-                  <img src="/assets/review-banner-3.svg" alt="" />
+                  <img src="/assets/review-banner-2.svg" alt="" />
                 </div>
               </div>
             </div>
