feat: flightlisting page created and initial setup for flightdetails.

--- a/flight/flightsearch.html
+++ b/flight/flightsearch.html
@@ -173,7 +173,7 @@
       </div>
     </section>
 
-    <!-- Peoples and Places Section -->
+    <!-- People and Travel Location -->
     <section>
       <div class="reviews-heading">
         <div class="grid">
@@ -183,7 +183,9 @@
             with us.
           </p>
         </div>
-        <button class="btn-stroke">See All</button>
+        <button class="btn-stroke">
+          <a href="flightlisting.html">See All</a>
+        </button>
       </div>
       <div class="world-map">
         <div id="mapContainer" class="map-container">
@@ -8998,7 +9000,9 @@
             Your one-stop travel pack for wherever you're off to next.
           </p>
         </div>
-        <button class="btn-stroke">See All</button>
+        <button class="btn-stroke">
+          <a href="flightlisting.html">See All</a>
+        </button>
       </div>
       <div class="booking-banner box-area">
         <div class="box">
@@ -9082,10 +9086,12 @@
         <div class="grid">
           <h1 class="heading-primary">Fall into travel</h1>
           <p class="secondary-heading heading-normal-txt">
-            Going somewhere to celebrate this season? Whether you’re going home or somewhere to roam, we’ve got the travel tools to get you to your destination.
+            Traveling this season? We’ll help you get there.
           </p>
         </div>
-        <button class="btn-stroke">See All</button>
+        <button class="btn-stroke">
+          <a href="flightlisting.html">See All</a>
+        </button>
       </div>
       <div class="travel-location-wrapper">
         <div class="travel-location-card card-1">
@@ -9098,7 +9104,7 @@
                   <h2 class="fw-semi-bold">$ 700</h2>
                 </div>
               </div>
-              <p class="fs-14 ">
+              <p class="fs-14">
                 Traveling is a unique experience as it's the best way to unplug
                 from the pushes and pulls of daily life. It helps us to forget
                 about our problems, frustrations, and fears at home. During our
@@ -9111,10 +9117,18 @@
             Book Flight
           </button>
         </div>
-        <div class="travel-location-card card-2"><img src="/assets/srilanka-bg-1.svg" alt=""></div>
-        <div class="travel-location-card card-3"><img src="/assets/srilanka-bg-2.svg" alt=""></div>
-        <div class="travel-location-card card-4"><img src="/assets/srilanka-bg-3.svg" alt=""></div>
-        <div class="travel-location-card card-5"><img src="/assets/srilanka-bg-4.svg" alt=""></div>
+        <div class="travel-location-card card-2">
+          <img src="/assets/srilanka-bg-1.svg" alt="" />
+        </div>
+        <div class="travel-location-card card-3">
+          <img src="/assets/srilanka-bg-2.svg" alt="" />
+        </div>
+        <div class="travel-location-card card-4">
+          <img src="/assets/srilanka-bg-3.svg" alt="" />
+        </div>
+        <div class="travel-location-card card-5">
+          <img src="/assets/srilanka-bg-4.svg" alt="" />
+        </div>
       </div>
     </section>
 
