feat: flight details page created. and initial setup for flight booking details.

--- a/flight/flightdetails.html
+++ b/flight/flightdetails.html
@@ -132,6 +132,201 @@
       </div>
     </header>
 
+    <section>
+      <div class="flight-details-wrapper">
+        <div class="flight-details-heading">
+          <h1 class="fs-28 fw-bold">Emirates A380 Airbus</h1>
+          <h2 class="fs-32 fw-bold text-accent-slamon">$240</h2>
+        </div>
+        <div class="flight-details-info">
+          <div>
+            <div class="flight-details-location">
+              <img src="/assets/location-icon.svg" alt="" />
+              <p class="fs-14">
+                Gümüssuyu Mah. Inönü Cad. No:8, Istanbul 34437
+              </p>
+            </div>
+            <div class="rating-badge">
+              <div class="rating-badge-ratings flex">
+                <p class="fs-12 fw-medium">4.2</p>
+                <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
+                <h2 class="fs-12 text-muted">54 reviews</h2>
+              </div>
+            </div>
+          </div>
+          <div class="flight-details-btn">
+            <button class="btn-stroke">
+              <img src="/assets/heart-stroke-icon.svg" alt="" />
+            </button>
+            <button class="btn-stroke">
+              <img src="/assets/share-icon.svg" alt="" />
+            </button>
+            <button class="btn-primary">Book Now</button>
+          </div>
+        </div>
+        <div class="flight-details-banner">
+          <img src="/assets/features-main-bg.svg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <!-- flight features -->
+    <section class="container">
+      <div class="flight-features-container">
+        <div class="flight-features-filter">
+          <h1 class="fs-28 fw-bold">Basic Economy Features</h1>
+          <div class="flight-features-filter-checkbox">
+            <label><input type="checkbox" name="features" /> Economy</label>
+            <label><input type="checkbox" name="features" /> First Class</label>
+            <label
+              ><input type="checkbox" name="features" /> Business class</label
+            >
+          </div>
+        </div>
+        <div class="swiper flight-features-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-1.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-2.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-3.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-4.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-1.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-2.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-3.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-4.svg" alt="" />
+            </div>
+            <div class="swiper-slide flight-features-img">
+              <img src="/assets/features-bg-1.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="flight-policies-container">
+          <div class="flight-policies-wrapper">
+            <h1 class="fs-28 fw-bold">Emirates Airlines Policies</h1>
+            <div class="flight-policies">
+              <img src="/assets/stopwatch-icon.svg" alt="" />
+              <p class="text-neutral-grey fw-medium">
+                Pre-flight cleaning, installation of cabin HEPA filters.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flight-itinerary-container">
+          <div class="flight-itinerary-date">
+            <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
+            <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
+          </div>
+          <div class="flight-itinerary-airlines">
+            <div class="itinerary-airlines flex">
+              <img src="/assets/emirates-logo.svg" alt="" width="74px" />
+              <div class="itinerary-airlines-info">
+                <h2 class="fw-semi-bold fs-28">Emirates</h2>
+                <p class="text-neutral-grey fs-16">AirbusA320</p>
+              </div>
+            </div>
+            <div class="itinerary-details">
+              <img src="/assets/airplane-icon.svg" alt="" />
+              <img src="/assets/wifi-icon.svg" alt="" />
+              <img src="/assets/stopwatch-icon.svg" alt="" />
+              <img src="/assets/foods-icon.svg" alt="" />
+              <img src="/assets/airlineseat-icon.svg" alt="" />
+            </div>
+          </div>
+          <div class="flight-itinerary-timeframe">
+            <div class="itinerary-time flex">
+              <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
+              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+            </div>
+            <img src="/assets/airplane-icon.svg" alt="" />
+            <div class="itinerary-time flex">
+              <h3 class="fs-24 fw-semi-bold">12:12pm</h3>
+              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+            </div>
+          </div>
+        </div>
+        <div class="flight-itinerary-container">
+          <div class="flight-itinerary-date">
+            <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
+            <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
+          </div>
+          <div class="flight-itinerary-airlines">
+            <div class="itinerary-airlines flex">
+              <img src="/assets/emirates-logo.svg" alt="" width="74px" />
+              <div class="itinerary-airlines-info">
+                <h2 class="fw-semi-bold fs-28">Emirates</h2>
+                <p class="text-neutral-grey fs-16">AirbusA320</p>
+              </div>
+            </div>
+            <div class="itinerary-details">
+              <img src="/assets/airplane-icon.svg" alt="" />
+              <img src="/assets/wifi-icon.svg" alt="" />
+              <img src="/assets/stopwatch-icon.svg" alt="" />
+              <img src="/assets/foods-icon.svg" alt="" />
+              <img src="/assets/airlineseat-icon.svg" alt="" />
+            </div>
+          </div>
+          <div class="flight-itinerary-timeframe">
+            <div class="itinerary-time flex">
+              <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
+              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+            </div>
+            <img src="/assets/airplane-icon.svg" alt="" />
+            <div class="itinerary-time flex">
+              <h3 class="fs-24 fw-semi-bold">13:09pm</h3>
+              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+            </div>
+          </div>
+        </div>
+        <div class="flight-itinerary-container">
+          <div class="flight-itinerary-date">
+            <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
+            <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
+          </div>
+          <div class="flight-itinerary-airlines">
+            <div class="itinerary-airlines flex">
+              <img src="/assets/emirates-logo.svg" alt="" width="74px" />
+              <div class="itinerary-airlines-info">
+                <h2 class="fw-semi-bold fs-28">Emirates</h2>
+                <p class="text-neutral-grey fs-16">AirbusA320</p>
+              </div>
+            </div>
+            <div class="itinerary-details">
+              <img src="/assets/airplane-icon.svg" alt="" />
+              <img src="/assets/wifi-icon.svg" alt="" />
+              <img src="/assets/stopwatch-icon.svg" alt="" />
+              <img src="/assets/foods-icon.svg" alt="" />
+              <img src="/assets/airlineseat-icon.svg" alt="" />
+            </div>
+          </div>
+          <div class="flight-itinerary-timeframe">
+            <div class="itinerary-time flex">
+              <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
+              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+            </div>
+            <img src="/assets/airplane-icon.svg" alt="" />
+            <div class="itinerary-time flex">
+              <h3 class="fs-24 fw-semi-bold">13:09pm</h3>
+              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Subscribe Section -->
     <section>
       <div class="subscribe-wrapper">
