--- a/flight/flightlisting.html
+++ b/flight/flightlisting.html
@@ -290,7 +290,7 @@
                 <div class="rating-badge">
                   <div class="rating-badge-ratings flex">
                     <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-semi-bold text-muted">Very Good</h1>
+                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
                     <h2 class="fs-12 text-muted">54 reviews</h2>
                   </div>
                   <div class="price grid">
@@ -354,7 +354,7 @@
                 <div class="rating-badge">
                   <div class="rating-badge-ratings flex">
                     <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-semi-bold text-muted">Very Good</h1>
+                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
                     <h2 class="fs-12 text-muted">54 reviews</h2>
                   </div>
                   <div class="price grid">
@@ -418,7 +418,7 @@
                 <div class="rating-badge">
                   <div class="rating-badge-ratings flex">
                     <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-semi-bold text-muted">Very Good</h1>
+                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
                     <h2 class="fs-12 text-muted">54 reviews</h2>
                   </div>
                   <div class="price grid">
@@ -482,7 +482,7 @@
                 <div class="rating-badge">
                   <div class="rating-badge-ratings flex">
                     <p class="fs-12 fw-medium">4.2</p>
-                    <h1 class="fs-12 fw-semi-bold text-muted">Very Good</h1>
+                    <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
                     <h2 class="fs-12 text-muted">54 reviews</h2>
                   </div>
                   <div class="price grid">
