feat: flight pages done and hotel search page.

--- a/flight/flightconfirmation.html
+++ b/flight/flightconfirmation.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="/src/landing-page/styles.css" />
     <link rel="stylesheet" href="/src/flight-page/flightlisting.css" />
     <link rel="stylesheet" href="/src/flight-page/flightdetails.css" />
+    <link rel="stylesheet" href="/src/flight-page/flightconfirmation.css" />
     <link rel="stylesheet" href="/src/global-utilities/utilities.css" />
     <link rel="stylesheet" href="/src/global-utilities/responsive.css" />
   </head>
@@ -136,7 +137,7 @@
       <div class="flight-details-wrapper">
         <div class="flight-details-heading">
           <h1 class="fs-28 fw-bold">Emirates A380 Airbus</h1>
-          <h2 class="fs-32 fw-bold text-accent-slamon">$240</h2>
+          <h2 class="fs-32 fw-bold">$240</h2>
         </div>
         <div class="flight-details-info">
           <div>
@@ -146,181 +147,129 @@
                 Gümüssuyu Mah. Inönü Cad. No:8, Istanbul 34437
               </p>
             </div>
-            <div class="rating-badge">
-              <div class="rating-badge-ratings flex">
-                <p class="fs-12 fw-medium">4.2</p>
-                <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
-                <h2 class="fs-12 text-muted">54 reviews</h2>
-              </div>
-            </div>
           </div>
           <div class="flight-details-btn">
             <button class="btn-stroke">
-              <img src="/assets/heart-stroke-icon.svg" alt="" />
-            </button>
-            <button class="btn-stroke">
               <img src="/assets/share-icon.svg" alt="" />
             </button>
-            <button class="btn-primary">Book Now</button>
+            <button class="btn-primary">Download</button>
           </div>
         </div>
-        <div class="flight-details-banner">
-          <img src="/assets/features-main-bg.svg" alt="" />
-        </div>
-      </div>
-    </section>
-
-    <!-- flight features -->
-    <section class="container">
-      <div class="flight-features-container">
-        <div class="flight-features-filter">
-          <h1 class="fs-28 fw-bold">Basic Economy Features</h1>
-          <div class="flight-features-filter-checkbox">
-            <label><input type="checkbox" name="features" /> Economy</label>
-            <label><input type="checkbox" name="features" /> First Class</label>
-            <label
-              ><input type="checkbox" name="features" /> Business class</label
-            >
-          </div>
-        </div>
-        <div class="swiper flight-features-swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-1.svg" alt="" />
+        <div class="flight-details-confirmation">
+          <div class="flight-terms">
+            <div class="flight-ticket">
+              <div class="flight-time">
+                <h1 class="fs-32 fw-semi-bold">11:11 pm</h1>
+                <p class="fs-14 text-neutral-grey fw-medium">Newark(EWR)</p>
+                <img src="/assets/airplanevert-icon.svg" alt="" />
+                <h1 class="fs-32 fw-semi-bold">12:12 pm</h1>
+                <p class="fs-14 text-neutral-grey fw-medium">Newark(EWR)</p>
+              </div>
+              <div class="ticket-info">
+                <div class="ticket-profile">
+                  <div class="flex">
+                    <img src="/assets/profile-icon.svg" alt="" />
+                    <div class="profile-name">
+                      <h1 class="fs-20 fw-bold">Jesnie Magaling</h1>
+                      <p class="fs-14">Boarding Pass N’123</p>
+                    </div>
+                  </div>
+                  <h2 class="fs-14 fw-bold">Business Class</h2>
+                </div>
+                <div class="plane-details grid-4">
+                  <div class="flex">
+                    <img src="/assets/calendar-primary-icon.svg" alt="" />
+                    <div class="profile-name">
+                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Date</h1>
+                      <p class="fs-12 fw-medium">Newark(EWR)</p>
+                    </div>
+                  </div>
+                  <div class="flex">
+                    <img src="/assets/clock-icon.svg" alt="" />
+                    <div class="profile-name">
+                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Time</h1>
+                      <p class="fs-12 fw-medium">12:00</p>
+                    </div>
+                  </div>
+                  <div class="flex">
+                    <img src="/assets/door-icon.svg" alt="" />
+                    <div class="profile-name">
+                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Gate</h1>
+                      <p class="fs-12 fw-medium">A12</p>
+                    </div>
+                  </div>
+                  <div class="flex">
+                    <img src="/assets/airlineseat-primary-icon.svg" alt="" />
+                    <div class="profile-name">
+                      <h1 class="text-neutral-grey fs-14 fw-semi-bold">Seat</h1>
+                      <p class="fs-12 fw-medium">128</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="ticket-barcode">
+                  <div class="ticket-code">
+                    <h1 class="fs-32 fw-semi-bold">EK</h1>
+                    <p class="fw-medium fs12">ABC12345</p>
+                  </div>
+                  <img src="/assets/barcode-icon.svg" alt="" />
+                </div>
+              </div>
             </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-2.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-3.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-4.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-1.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-2.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-3.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-4.svg" alt="" />
-            </div>
-            <div class="swiper-slide flight-features-img">
-              <img src="/assets/features-bg-1.svg" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="flight-policies-container">
-          <div class="flight-policies-wrapper">
-            <h1 class="fs-28 fw-bold">Emirates Airlines Policies</h1>
-            <div class="flight-policies">
-              <img src="/assets/stopwatch-icon.svg" alt="" />
-              <p class="text-neutral-grey fw-medium">
-                Pre-flight cleaning, installation of cabin HEPA filters.
+            <h1 class="fw-semi-bold fs-24">Terms and Conditions</h1>
+            <h2 class="fs-20 fw-medium">Payments</h2>
+            <ul>
+              <li>
+                <span>
+                  If you are purchasing your ticket using a debit or credit card
+                  via the Website, we will process these payments via the
+                  automated secure common payment gateway which will be subject
+                  to fraud screening purposes.
+                </span>
+              </li>
+              <li>
+                <span>
+                  If you do not supply the correct card billing address and/or
+                  cardholder information, your booking will not be confirmed and
+                  the overall cost may increase. We reserve the right to cancel
+                  your booking if payment is declined for any reason or if you
+                  have supplied incorrect card information. If we become aware
+                  of, or is notified of, any fraud or illegal activity
+                  associated with the payment for the booking, the booking will
+                  be cancelled and you will be liable for all costs and expenses
+                  arising from such cancellation, without prejudice to any
+                  action that may be taken against us.
+                </span>
+              </li>
+              <li>
+                <span>
+                  Golobe may require the card holder to provide additional
+                  payment verification upon request by either submitting an
+                  online form or visiting the nearest Golobe office, or at the
+                  airport at the time of check-in. Golobe reserves the right to
+                  deny boarding or to collect a guarantee payment (in cash or
+                  from another credit card) if the card originally used for the
+                  purchase cannot be presented by the cardholder at check-in or
+                  when collecting the tickets, or in the case the original
+                  payment has been withheld or disputed by the card issuing
+                  bank. Credit card details are held in a secured environment
+                  and transferred through an internationally accepted system.
+                </span>
+              </li>
+            </ul>
+            <h3 class="fs-20 fw-medium">Contact Us</h3>
+            <div>
+              <p>
+                If you have any questions about our Website or our Terms of Use,
+                please contact:
               </p>
-            </div>
-          </div>
-        </div>
-        <div class="flight-itinerary-container">
-          <div class="flight-itinerary-date">
-            <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
-            <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
-          </div>
-          <div class="flight-itinerary-airlines">
-            <div class="itinerary-airlines flex">
-              <img src="/assets/emirates-logo.svg" alt="" width="74px" />
-              <div class="itinerary-airlines-info">
-                <h2 class="fw-semi-bold fs-28">Emirates</h2>
-                <p class="text-neutral-grey fs-16">AirbusA320</p>
-              </div>
-            </div>
-            <div class="itinerary-details">
-              <img src="/assets/airplane-icon.svg" alt="" />
-              <img src="/assets/wifi-icon.svg" alt="" />
-              <img src="/assets/stopwatch-icon.svg" alt="" />
-              <img src="/assets/foods-icon.svg" alt="" />
-              <img src="/assets/airlineseat-icon.svg" alt="" />
-            </div>
-          </div>
-          <div class="flight-itinerary-timeframe">
-            <div class="itinerary-time flex">
-              <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
-              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
-            </div>
-            <img src="/assets/airplane-icon.svg" alt="" />
-            <div class="itinerary-time flex">
-              <h3 class="fs-24 fw-semi-bold">12:12pm</h3>
-              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
-            </div>
-          </div>
-        </div>
-        <div class="flight-itinerary-container">
-          <div class="flight-itinerary-date">
-            <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
-            <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
-          </div>
-          <div class="flight-itinerary-airlines">
-            <div class="itinerary-airlines flex">
-              <img src="/assets/emirates-logo.svg" alt="" width="74px" />
-              <div class="itinerary-airlines-info">
-                <h2 class="fw-semi-bold fs-28">Emirates</h2>
-                <p class="text-neutral-grey fs-16">AirbusA320</p>
-              </div>
-            </div>
-            <div class="itinerary-details">
-              <img src="/assets/airplane-icon.svg" alt="" />
-              <img src="/assets/wifi-icon.svg" alt="" />
-              <img src="/assets/stopwatch-icon.svg" alt="" />
-              <img src="/assets/foods-icon.svg" alt="" />
-              <img src="/assets/airlineseat-icon.svg" alt="" />
-            </div>
-          </div>
-          <div class="flight-itinerary-timeframe">
-            <div class="itinerary-time flex">
-              <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
-              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
-            </div>
-            <img src="/assets/airplane-icon.svg" alt="" />
-            <div class="itinerary-time flex">
-              <h3 class="fs-24 fw-semi-bold">13:09pm</h3>
-              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
-            </div>
-          </div>
-        </div>
-        <div class="flight-itinerary-container">
-          <div class="flight-itinerary-date">
-            <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
-            <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
-          </div>
-          <div class="flight-itinerary-airlines">
-            <div class="itinerary-airlines flex">
-              <img src="/assets/emirates-logo.svg" alt="" width="74px" />
-              <div class="itinerary-airlines-info">
-                <h2 class="fw-semi-bold fs-28">Emirates</h2>
-                <p class="text-neutral-grey fs-16">AirbusA320</p>
-              </div>
-            </div>
-            <div class="itinerary-details">
-              <img src="/assets/airplane-icon.svg" alt="" />
-              <img src="/assets/wifi-icon.svg" alt="" />
-              <img src="/assets/stopwatch-icon.svg" alt="" />
-              <img src="/assets/foods-icon.svg" alt="" />
-              <img src="/assets/airlineseat-icon.svg" alt="" />
-            </div>
-          </div>
-          <div class="flight-itinerary-timeframe">
-            <div class="itinerary-time flex">
-              <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
-              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
-            </div>
-            <img src="/assets/airplane-icon.svg" alt="" />
-            <div class="itinerary-time flex">
-              <h3 class="fs-24 fw-semi-bold">13:09pm</h3>
-              <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+              <p>Golobe Group Q.C.S.C</p>
+              <p>Golobe Tower</p>
+              <p>P.O. Box: 22550</p>
+              <p>Doha, State of Qatar</p>
+              <p>
+                Further contact details can be found at
+                <a href="#">golobe.com/help</a>
+              </p>
             </div>
           </div>
         </div>
