--- a/flight/flightlisting.html
+++ b/flight/flightlisting.html
@@ -63,7 +63,7 @@
             <img src="/assets/heart-icon.svg" alt="" />&nbsp;Favorites
           </button>
           <button class="user-profile-btn btn-secondary fs-16 fw-semi-bold">
-            <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;John D.
+            <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;Jesnie M.
           </button>
           <div class="mobile-toggle" id="hamburger">
             <i class="fa-solid fa-bars menu-icon"></i>
@@ -81,7 +81,7 @@
             />
             <div class="grid user-nav-info">
               <!-- Added class for styling info -->
-              <h1 class="fs-16 fw-semi-bold">John Doe</h1>
+              <h1 class="fs-16 fw-semi-bold">Jesnie Magaling</h1>
               <h2 class="fs-14 fw-regular text-neutral-grey">Online</h2>
             </div>
           </div>
