--- a/flight/flightsearch.html
+++ b/flight/flightsearch.html
@@ -47,7 +47,10 @@
           >
             <img src="/assets/airplane-icon.svg" alt="airplane" />Find Flights
           </a>
-          <a href="#" class="inline-flex nav-link stays-btn nav-booking-tab">
+          <a
+            href="../hotel/hotelsearch.html"
+            class="inline-flex nav-link stays-btn nav-booking-tab"
+          >
             <img src="/assets/bed-icon.svg" alt="bed" />Find Stays
           </a>
         </div>
