--- a/flight/flightbookingdetails.html
+++ b/flight/flightbookingdetails.html
@@ -65,7 +65,7 @@
             <img src="/assets/heart-icon.svg" alt="" />&nbsp;Favorites
           </button>
           <button class="user-profile-btn btn-secondary fs-16 fw-semi-bold">
-            <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;John D.
+            <img src="/assets/profile-icon.svg" alt="" />&nbsp;&nbsp;Jesnie M.
           </button>
           <div class="mobile-toggle" id="hamburger">
             <i class="fa-solid fa-bars menu-icon"></i>
@@ -83,7 +83,7 @@
             />
             <div class="grid user-nav-info">
               <!-- Added class for styling info -->
-              <h1 class="fs-16 fw-semi-bold">John Doe</h1>
+              <h1 class="fs-16 fw-semi-bold">Jesnie Magaling</h1>
               <h2 class="fs-14 fw-regular text-neutral-grey">Online</h2>
             </div>
           </div>
@@ -132,6 +132,140 @@
         >
       </div>
     </header>
+
+    <!-- Flight booking payment -->
+    <section class="booking-payment container">
+      <div class="flight-booking-payment">
+        <div class="booking-payment-wrapper">
+          <div class="flight-details-heading">
+            <h1 class="fs-28 fw-bold">Emirates A380 Airbus</h1>
+            <h2 class="fs-32 fw-bold text-accent-slamon">$240</h2>
+          </div>
+          <div class="flight-itinerary-container">
+            <div class="flight-itinerary-date">
+              <h1 class="fs-20 fw-bold">Return Wed, Dec 8</h1>
+              <p class="fs-20 fw-medium text-neutral-grey">9h 13m</p>
+            </div>
+            <div class="flight-itinerary-airlines">
+              <div class="itinerary-airlines flex">
+                <img src="/assets/emirates-logo.svg" alt="" width="74px" />
+                <div class="itinerary-airlines-info">
+                  <h2 class="fw-semi-bold fs-28">Emirates</h2>
+                  <p class="text-neutral-grey fs-16">AirbusA320</p>
+                </div>
+              </div>
+              <div class="itinerary-details">
+                <img src="/assets/airplane-icon.svg" alt="" />
+                <img src="/assets/wifi-icon.svg" alt="" />
+                <img src="/assets/stopwatch-icon.svg" alt="" />
+                <img src="/assets/foods-icon.svg" alt="" />
+                <img src="/assets/airlineseat-icon.svg" alt="" />
+              </div>
+            </div>
+            <div class="flight-itinerary-timeframe">
+              <div class="itinerary-time flex">
+                <h3 class="fs-24 fw-semi-bold">11:11pm</h3>
+                <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+              </div>
+              <img src="/assets/airplane-icon.svg" alt="" />
+              <div class="itinerary-time flex">
+                <h3 class="fs-24 fw-semi-bold">12:12pm</h3>
+                <p class="text-neutral-grey fw-medium">Newark(EWR)</p>
+              </div>
+            </div>
+          </div>
+          <div class="payment-options">
+            <!-- Option 1 -->
+            <label class="payment-option selected">
+              <div class="payment-info">
+                <h3 class="fs-16 fw-bold">Pay in full</h3>
+                <p>Pay the total and you are all set</p>
+              </div>
+              <input type="radio" name="payment" checked />
+            </label>
+
+            <!-- Option 2 -->
+            <label class="payment-option">
+              <div class="payment-info">
+                <h3 class="fs-16 fw-bold">Pay part now, part later</h3>
+                <p>
+                  Pay $207.43 now, and the rest ($207.43) will be automatically
+                  charged to the same payment method on Nov 14, 2022. No extra
+                  fees.
+                </p>
+                <a href="#">More info</a>
+              </div>
+              <input type="radio" name="payment" />
+            </label>
+          </div>
+          <div class="payment-method-wrapper">
+            <!-- Option 1 -->
+            <label class="payment-method selected">
+              <div class="payment-info">
+                <img src="/assets/visa-icon.svg" alt="" />
+                <h3 class="fs-16 fw-bold">
+                  **** 4321 <span class="fw-regular fs-14">02/27</span>
+                </h3>
+              </div>
+              <input type="radio" name="paymentMethod" checked />
+            </label>
+            <!-- Option 1 -->
+            <button class="payment-method-btn">
+              <img src="/assets/addcircle-icon.svg" alt="" />
+              <p class="fw-medium fs-12 text-neutral-grey">Add a new card</p>
+            </button>
+          </div>
+        </div>
+
+        <aside class="booking-total-container">
+          <div class="booking-total-wrapper flex">
+            <div class="booking-total-banner">
+              <img src="/assets/booking-total-bg.svg" alt="" />
+            </div>
+            <div class="booking-total-heading">
+              <h2 class="fw-medium text-neutral-grey">Economy</h2>
+              <h2 class="fs-20 fw-semi-bold">Emirates A380 Airbus</h2>
+              <div class="rating-badge">
+                <div class="rating-badge-ratings flex">
+                  <p class="fs-12 fw-medium">4.2</p>
+                  <h1 class="fs-12 fw-bold text-muted">Very Good</h1>
+                  <h2 class="fs-12 text-muted">54 reviews</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="booking-price-info">
+            <p class="fw-medium">
+              Your booking is protected by
+              <strong class="fw-bold">golobe</strong>
+            </p>
+            <div class="booking-price-details fw-medium">
+              <h1 class="fw-bold">Price Details</h1>
+              <div class="price">
+                <p>Base Fare</p>
+                <h2 class="fw-semi-bold">$400</h2>
+              </div>
+              <div class="price">
+                <p>Discount</p>
+                <h2 class="fw-semi-bold">$400</h2>
+              </div>
+              <div class="price">
+                <p>Taxes</p>
+                <h2 class="fw-semi-bold">$400</h2>
+              </div>
+              <div class="price">
+                <p>Service Fee</p>
+                <h2 class="fw-semi-bold">$400</h2>
+              </div>
+            </div>
+            <div class="price">
+              <p class="fw-bold">Total</p>
+              <h2 class="fw-semi-bold">$400</h2>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </section>
 
     <!-- Subscribe Section -->
     <section>
@@ -207,15 +341,67 @@
         </div>
       </div>
     </footer>
+    <div class="modal" id="addCardModal">
+      <div class="modal-overlay"></div>
+      <div class="modal-content">
+        <button class="modal-close">
+          <img src="/assets/close-icon.svg" alt="Close" />
+        </button>
+        <h2 class="fs-40 fw-bold">Add a new Card</h2>
+
+        <form class="add-card-form">
+          <!-- Floating Card Number Input -->
+          <div class="floating-input-group">
+            <input type="text" id="cardNumber" placeholder=" " required />
+            <label for="cardNumber">Card Number</label>
+            <img src="/assets/visablue-icon.svg" class="card-icon" alt="Visa" />
+          </div>
+
+          <div class="flex">
+            <div class="floating-input-group exp-date">
+              <input type="text" placeholder="02/27" required />
+              <label>Exp. Date</label>
+            </div>
+            <div class="floating-input-group cvc">
+              <input type="text" placeholder="123" required />
+              <label>CVC</label>
+            </div>
+          </div>
+
+          <div class="floating-input-group">
+            <input type="text" id="cardNumber" placeholder=" " required />
+            <label for="cardNumber">Name on Card</label>
+          </div>
+
+          <div class="floating-input-group">
+            <select>
+              <option>United States</option>
+              <option>Philippines</option>
+              <option>Japan</option>
+              <!-- Add more -->
+            </select>
+          </div>
+
+          <label class="checkbox">
+            <input type="checkbox" />
+            Securely save my information for 1-click checkout
+          </label>
+
+          <button type="submit" class="btn-primary">Add Card</button>
+
+          <p class="fs-12 text-center text-neutral-grey">
+            By confirming your submission, you allow Golobe to charge your card
+            for this payment and future payments in accordance with their terms.
+            You can always cancel your subscription.
+          </p>
+        </form>
+      </div>
+    </div>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="/src/landing-page/main.js"></script>
     <script type="module" src="/src/flight-page/flightdetails.js"></script>
-    <script
-      type="module"
-      src="/src/flight-page/flightbookingdetails.js"
-    ></script>
     <script type="module" src="/src/flight-page/flightlisting.js"></script>
     <script type="module" src="/src/global-utilities/swiper.js"></script>
   </body>
